# text-detection-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: sample_texts.tsv
docs/: README.md  bad_case_optimization.md  bad_cases.md  baseline_comparison.md  course_requirements.md  csn_comparison.csv  experiment_report.md  fusion_experiment.md  fusion_stability.csv  metrics_plan.md  model_algorithm_architecture.md  optimization_log.md  report_summary.md
docs/experiments/: README.md  all_versions_multidataset_validation.csv  all_versions_multidataset_validation.md  bad_case_optimization.csv  bad_case_tuning_grid.csv  baseline_comparison.csv  csn_comparison.md  domain_adaptation_validation.csv  domain_adaptation_validation.md  domain_adaptation_validation_20pct.csv  domain_adaptation_validation_20pct.md  evaluation_protocol_results.csv  evaluation_protocol_results.md  fusion_experiment.csv  latest_results_summary.md  multidataset_fusion_validation.csv  multidataset_fusion_validation.md  optimization_log.md  semantic_v8_autoaug_examples.csv  semantic_v8_autoaug_filtered_results.md  semantic_v8_autoaug_filtered_terms.csv  semantic_v8_autoaug_results.md  semantic_v8_autoaug_terms.csv  semantic_v8_calibration_diagnostics.md  semantic_v8_encoder_comparison.md  semantic_v8_protocol_results.csv
docs/figures/: README.md
scripts/: predict.py  train_baseline.py
src/: __init__.py  adversarial.py  char_similarity.py  cli.py  datasets.py  experiments.py  features.py  modeling.py  risk_features.py  runners.py  visualization.py
tests/: test_preprocess.py
(+60 files in other folders)
